--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://comp-libr.netlify.app/styles/components.css"
+    />
     <title>Clean React App</title>
   </head>
   <body>
