refactor: updated UI

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="kannadaclass101.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -31,7 +31,7 @@
       rel="stylesheet"
       href="https://comp-libr.netlify.app/styles/components.css"
     />
-    <title>Clean React App</title>
+    <title>KannadaClass101</title>
   </head>
   <body>
     <div id="root"></div>
